# instaffo-api

./: .coverage  .env  Dockerfile  INSTRUCTIONS.md  README.md  _es_example.py  docker-compose.yml  pyproject.toml  serve.sh
app/: config.py  main.py  schemas.py  services.py  test_main.py
app/tests/: test_main.py  test_services.py
es_lib/: __init__.py  elastic_search_client.py  exceptions.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5129300603c71d00___init___py.html  z_5129300603c71d00_test_main_py.html  z_5129300603c71d00_test_services_py.html  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_config_py.html  z_5f5a17c013354698_main_py.html  z_5f5a17c013354698_schemas_py.html  z_5f5a17c013354698_services_py.html
seed_image/: Dockerfile  populate_es_indices.py
seed_image/data/: candidates.json  jobs.json
seed_image/es_config/: cluster_settings.yml  index_settings.yml  mappings_candidates.yml  mappings_jobs.yml
