[tool.poetry]
name = "python-developer"
version = "0.1.0"
description = ""
authors = ["Feng Lu <feng@instaffo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
elasticsearch = "^8.17.0"
python-dotenv = "^1.0.1"
fastapi = "^0.111.1"
uvicorn = "^0.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
